--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,4 +8,6 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
+CMD ["./startup.sh"]
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
