--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     restart: always
     ports:
       - 8000:8000
+    environment:
+      - DEBUG=1
     depends_on:
       - db
     networks:
